@@ -1,3 +1,15 @@
+2018-10-18  Andrew Sutton  <asutton@uakron.edu>
+
+	Cleanups from building in bootstrap.
+	* constraint.cc (expand_concept): Removed; no longer used.
+	(normalize_*): Make internal functions static.
+	(normalize_atom): Remove unused check for constraints.
+	(build_constraint_info): Remove the surrounding inline namespace
+	and make the function static.
+	* cp-tree.h: (expand_concept): Removed; no longer used. 
+	(concept_definition_p) Overload and use const_cast to suppress 
+	warnings about explicit casts that remove cv-quals.
+
 2018-10-17  David Malcolm  <dmalcolm@redhat.com>
 
 	* Make-lang.in (selftest-c++): New.
